--- a/src/main/resources/templates/common/myPageSide-menu.html
+++ b/src/main/resources/templates/common/myPageSide-menu.html
@@ -19,6 +19,7 @@
         <li><a href="/myPage/info">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 정보 보기/변경</a></li>
         <li><a href="/myPage/changePw">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;비밀번호 변경</a></li>
         <li><a href="/myPage/preference">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 취향 보기</a></li>
+        <li><a href="/myPage/withdrawal">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;회원 탈퇴</a></li>
       </ul>
     </h3>
 
