--- a/src/main/resources/templates/myPage/info.html
+++ b/src/main/resources/templates/myPage/info.html
@@ -30,8 +30,8 @@
                       class="needs-validation mx-auto mt-4" style="width: 60%;" novalidate>
 
                       <!-- 이름 입력, 생일 -->
-                      <div class="form-floating row g-3 mb-2 mt-2 ml-50 position-relative">
-                        <div class="red col-1"> * 필수&nbsp;&nbsp; </div>
+                      <div class="form-floating row g-3 mb-2 mt-2 position-relative">
+                        <div class="red col-1">* 필수 </div>
                         <div class="form-floating col-6 position-relative">
                           <input type="text" class="form-control" id="name" name="name" placeholder="" maxlength="6"
                             autocomplete="off" required th:value="${session.loginMember.name}">
@@ -109,7 +109,7 @@
                       </div>
                       <div class="form-floating mb-2 mt-2 position-relative">
                         <input type="text" class="form-control" id="detailAddress" name="detailAddress" maxlength="50"
-                          autocomplete="off" placeholder="" readonly th:value="${session.loginMember.detailAddress}"
+                          autocomplete="off" placeholder="" th:value="${session.loginMember.detailAddress}"
                           style="width: 58%;">
                         <label for="detailAddress">상세 주소</label>
                       </div>
@@ -144,14 +144,20 @@
                       </div>
                       <div class="form-floating mb-2 mt-2 position-relative">
                         <input type="text" class="form-control" id="addDetailAddress" name="addDetailAddress"
-                          maxlength="50" autocomplete="off" placeholder="" readonly
+                          maxlength="50" autocomplete="off" placeholder=""
                           th:value="${session.loginMember.addDetailAddress}" style="width: 58%;">
                         <label for="addDetailAddress">상세 주소</label>
                       </div>
                       <br>
-                      <!-- 가입 버튼 -->
-                      <button type="submit" id="submitBtn" class="btn btn-success w-100"
-                        style="display: none; background-color: #205375; border-color: #205375;">변경하기</button>
+                      <!-- 가입 버튼 위에 리셋 버튼 추가 -->
+                      <div class="d-flex gap-2 mb-3">
+                        <button type="button" id="resetBtn" class="btn btn-danger" style="display: none;">
+                          되돌리기 <i class="fa-solid fa-rotate"></i>
+                        </button>
+                        <button type="submit" id="submitBtn" class="btn btn-success col-8"
+                          style="display: none; background-color: #205375; border-color: #205375;">
+                          변경하기</button>
+                      </div>
                     </form>
                   </div>
                 </div>
