--- a/src/main/resources/templates/admin/adminSales.html
+++ b/src/main/resources/templates/admin/adminSales.html
@@ -88,6 +88,7 @@
               <option value="sales">전체 매출</option>
               <option value="company">출판사</option>
               <input type="text" class="text hidden">
+              <button id="searchBtn">검색</button>
             </select>
 
 
