--- a/src/main/resources/templates/admin/adminSales.html
+++ b/src/main/resources/templates/admin/adminSales.html
@@ -87,6 +87,7 @@
             <select id="sortSelect">
               <option value="sales">전체 매출</option>
               <option value="company">출판사</option>
+              <option value="bookTitle">책 제목</option>
               <input type="text" class="text hidden">
               <button id="searchBtn">검색</button>
             </select>
