20241205 오더 정상화 이 또한 김창섭의 은혜겠지요

--- a/src/main/resources/static/css/cart/cart.css
+++ b/src/main/resources/static/css/cart/cart.css
@@ -430,3 +430,9 @@
   transform: translateX(0);
   transition: transform 0.1s ease-out; 
 }
+
+.cartTable a,
+.recommendation-item a { 
+  text-decoration: none;
+  color: black;
+}
