--- a/src/main/resources/static/css/order/order.css
+++ b/src/main/resources/static/css/order/order.css
@@ -26,6 +26,7 @@ h4 {
 .orderMain {
   margin: 0;
   margin-left: 300px;
+  margin-right: 300px;
   margin-bottom: 100px;
   padding: 20px;
   background-color: #ffffff;
@@ -38,26 +39,21 @@ h4 {
   gap: 20px;
 }
 
+.infoAndOrder {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  width: 100%;
+}
+
 .addressForm {
+  width: 100%;
+  max-width: 500px;
   padding: 15px;
   border: 1px solid #ddd;
   border-radius: 10px;
   background-color: #ffffff;
-  width: 100%;
-  margin-left: 0;
-  margin-right: auto;
-  max-width: 500px;
-  flex: 1 1 45%;
-  height: auto; 
-}
-
-.infoAndOrder {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  gap: 20px;
-  width: 100%;
-  align-items: stretch; 
+  margin-bottom: 20px;
 }
 
 .addressForm input {
@@ -99,11 +95,14 @@ h4 {
 }
 
 .additional-address-form {
-  margin-top: 20px;
+  width: 100%;
+  max-width: 500px;
   padding: 15px;
   border: 1px solid #ddd;
   border-radius: 10px;
   background-color: #ffffff;
+  margin-top: 20px;
+  order: 3;
 }
 
 .additional-address-form h4 {
@@ -184,13 +183,14 @@ h4 {
 
 /* 주문 상품 목록 */
 #orderTableContainer{
+  width: calc(100% - 520px);
+  min-width: 500px;
+  margin-top: 0;
   border: 1px solid #ddd;
   border-radius: 10px;
   padding: 15px;
   
   flex: 1 1 50%; 
-  max-width: 80%;
-  margin-right: 50px;
   height: auto;
   min-height: 637px;
 }
@@ -372,4 +372,22 @@ h3 {
     margin-left: 0;
     margin-right: 0;
   }
+}
+
+.orderTable a {
+  text-decoration: none;
+  color: black;
+}
+
+@media (max-width: 1200px) {
+  #orderTableContainer {
+    width: 100%;
+    margin-top: 20px;
+  }
+}
+
+.addressBtnContainer {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
 }
